# school-finder

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  DATA_SOURCES_NEEDED.md  Dockerfile  FEATURE_ETHOS_AGENT.md  FEATURE_REQUESTS.md  HOLIDAY_CLUBS_README.md  HOLIDAY_CLUB_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  ISSUES.md  OFSTED_COLLECTION_REPORT.md  OFSTED_FEATURE_SUMMARY.md  OFSTED_TRAJECTORY_IMPLEMENTATION_STATUS.md  PARKING_CHAOS_FEATURE.md  PRIVATE_SCHOOL_HIDDEN_COSTS_IMPLEMENTATION.md  QUICK_START_OFSTED_TRAJECTORY.md  README.md  UNIFORM_FEATURE_IMPLEMENTATION.md  apply_ofsted_trajectory.sh  commit-all-features.sh  commit-ethos-agent.sh  entrypoint.sh  fix-and-commit.sh  fly.toml  ofsted_trajectory_implementation.md  push-hidden-costs-feature.sh  pyproject.toml  verify-ethos-agent.sh
.claude/: USE_CASES.md  ralph-loop.local.md  settings.json  settings.local.json
.husky/: pre-commit
data/: schools.db
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
scripts/: file_github_issues.py  fix_clubs_and_seed_admissions.py  ralph_ofsted_collector.py  rerun_missing_clubs.py  update_missing_ofsted.py  verify_ofsted_complete.py
src/: config.py  main.py
tests/: conftest.py  seed_test_data.py  test_admissions_criteria.py  test_catchment.py  test_comprehensive_parent_agent.py  test_decision_extended.py  test_ethos_agent.py  test_filters.py  test_integration.py  test_ofsted_trajectory.py  test_parking_ratings.py  test_ralph_wiggum_v2.py  test_seed_data.py  test_smoke.py  test_user_agent_parent.py
(+124 files in other folders)
